--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -151,6 +151,19 @@
 		<!--  -->
 
 		<!--  -->
+		<div layout="row" layout-align="center center" style="background-color: {{primary_hue_normal.value}};">
+			<md-card layout="column" layout-align="center center" style="background: transparent; width: 80%; z-index: 2; position: relative;">
+				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">SOME OF OUR PARTNERS</h1>
+				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
+					<div layout-wrap layout="row" layout-align="center center">
+						<img src="media/spsd-logo-white.png" style="max-height: 48px;">
+					</div>
+				</div>
+			</md-card>
+		</div>
+		<!--  -->
+
+		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px;">
 			<md-card layout="column" layout-align="center center" style="background: {{base_hue_lightest.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
