--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -117,7 +117,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center">
-			<md-card layout="row" layout-align="center center" class="md-whiteframe-4dp" style="background: {{primary_hue_normal.value}}; width: 80%; margin-top: -64px; z-index: 2; overflow: hidden; position: relative;">
+			<md-card layout="row" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 80%; margin-top: -64px; z-index: 2; overflow: hidden; position: relative;">
 				<div flex="33" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%;">
 					<h1 style="color: {{base_hue_lightest.value}}; font-size: 24px; line-height: 64px; margin: 0; z-index: 2">Some Sample Text Here</h1>
 					<p style="color: {{base_hue_lightest.value}}; margin: 16px; line-height: 24px; z-index: 2">MMA offers a “one-stop shop” by integrating Civil Engineering with Planning, Zoning, Surveying, Landscape Architecture and Construction Management.</p>
@@ -151,12 +151,12 @@
 		<!--  -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center" style="background-color: {{primary_hue_normal.value}};">
+		<div layout="row" layout-align="center center" style="background-color: #f5f5f5;">
 			<md-card layout="column" layout-align="center center" style="background: transparent; width: 80%; z-index: 2; position: relative;">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">SOME OF OUR PARTNERS</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="center center">
-						<img src="media/spsd-logo-white.png" style="max-height: 48px;">
+						<img src="media/spsd-logo.png" style="max-height: 72px;">
 					</div>
 				</div>
 			</md-card>
