--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -151,7 +151,7 @@
 		<!--  -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center" style="background-color: #f5f5f5;">
+		<div layout="row" layout-align="center center" style="background-color: #f5f5f5; padding-top: 64px; padding-bottom: 64px;">
 			<md-card layout="column" layout-align="center center" style="background: transparent; width: 80%; z-index: 2; position: relative;">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">SOME OF OUR PARTNERS</h1>
 				<div flex="100" layout="row" layout-align="center center">
