--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -134,7 +134,7 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
+												<span class="md-title" style="font-size: 24px;">GIS</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
@@ -175,7 +175,7 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
@@ -260,7 +260,7 @@
 										<md-card-header>
 											<md-card-header-text>
 												<p style="font-size: 14px; color: {{base_hue_lightest.value}};">OUR STRATEGY</p>
-												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px;">GEOGRAPHIC INFORMATION SYSTEMS</span>
 												<p style="font-size: 18px; color: {{base_hue_lightest.value}};">DELIVERS</p>
 											</md-card-header-text>
 										</md-card-header>
@@ -275,7 +275,7 @@
 										<md-card-header>
 											<md-card-header-text>
 												<p style="font-size: 14px; color: {{base_hue_darkest.value}};">OUR FOCUS</p>
-												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px;">GEOGRAPHIC INFORMATION SYSTEMS</span>
 												<p style="font-size: 18px;">IS UNRIVALED</p>
 											</md-card-header-text>
 										</md-card-header>
@@ -293,7 +293,7 @@
 								<md-card style="background: #fafafa; height: 100%;">
 									<md-card-header>
 										<md-card-header-text>
-											<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
+											<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
 										</md-card-header-text>
 									</md-card-header>
 									<md-card-content>
@@ -303,7 +303,7 @@
 								<md-card style="background: #fafafa; height: 100%;">
 									<md-card-header>
 										<md-card-header-text>
-											<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
+											<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
 										</md-card-header-text>
 									</md-card-header>
 									<md-card-content>
