--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -15,14 +15,17 @@
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
 		<!-- messaging notification -->
-		<div layout="row" ng-init="show_notification = true; button_clicks = 0" ng-hide="show_notification == false || button_clicks > 0" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 3">
+		<div layout="row" ng-init="show_notification = true; button_clicks = 0;" ng-hide="show_notification == false || button_clicks > 0" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 3">
 			<p style="color: {{base_hue_lightest.value}}; font-size: 14px; padding: 0 0 0 16px;">Click Here To Connect With Us!</p><span flex></span>
 			<md-button class="md-icon-button" ng-click="show_notification = false" aria-label="More">
 				<md-icon style="color: {{base_hue_lightest.value}}">close</md-icon>
 			</md-button>
 		</div>
 		<div class="index-form" layout-padding ng-show="show_notification == true && button_clicks > 0">
-			<md-card style="background: #fafafa;" style="width: 100%">
+			<md-card style="background: #fafafa; width: 100%; position: relative;">
+				<md-button style="position: absolute; top: 8px; right: 8px;" class="md-icon-button" ng-click="show_notification = false" aria-label="More">
+					<md-icon style="color: {{base_hue_lightest.value}}">close</md-icon>
+				</md-button>
                 <form name="index">
                 	<div style="text-align: center">
                 		<h1>Contact MMA Today!</h1>
@@ -51,10 +54,11 @@
                         <md-list-item>
                         	<md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Message</label>
-                                <textarea name="message" md-detect-hidden="true" ng-model="index_page_contact_form.message" rows="3" minlength="10" md-maxlength="250"></textarea>
+                                <textarea name="message" md-detect-hidden="true" ng-model="index_page_contact_form.message" rows="3" minlength="10" md-maxlength="250" required></textarea>
                                 <div ng-messages="index.message.$error" ng-show="index.message.$dirty">
                                     <div ng-message="required">Message required!</div>
                                     <div ng-message="minlength">Message too short!</div>
+                                    <div ng-message="md-maxlength">Message too long!</div>
                                 </div>
                             </md-input-container>
                         </md-list-item>
@@ -65,7 +69,7 @@
                 </form>
             </md-card>
 		</div>
-		<md-button ng-hide="show_notification == true && button_clicks > 0" ng-click="show_notification = true; button_clicks++" style="background-color: {{primary_hue_normal.value}}; position: fixed; right: 24px; bottom: 48px;" class="md-fab" aria-label="More">
+		<md-button ng-hide="show_notification == true && button_clicks > 0" ng-click="show_notification = true; button_clicks++;" style="background-color: {{primary_hue_normal.value}}; position: fixed; right: 24px; bottom: 48px;" class="md-fab" aria-label="More">
 			<md-icon style="color: {{base_hue_lightest.value}}">mail</md-icon>
 		</md-button>
 		<!-- messaging notification -->
