--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -17,11 +17,11 @@
 					</div>
 					<md-card-header>
 						<md-card-header-text>
-							<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ENTERTAINMENT DISTRICTS</span>
+							<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">Brand New Look</span>
 						</md-card-header-text>
 					</md-card-header>
 					<md-card-content>
-						<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+						<p style="color: {{base_hue_darker.value}};">Welcome to MMA's new web experience!</p>
 					</md-card-content>
 				</md-card>
 			</div>
