--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -23,7 +23,7 @@
 	    <div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div layout="row" flex="100" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center;">
+			<div layout="row" flex="100" style="height: 300px; position: relative; top: 0; overflow: hidden; text-align: center;">
 				<div style="width: 100%; height: 100%; position: absolute;">
 				    <img ng-src="{{spotlightPage.data.page.background.images.source}}">
 				</div>
@@ -31,7 +31,7 @@
 			</div>
 			<!-- =Page Title -->
 			
-			<div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="80" layout-align="start start" ng-attr-style="margin-top: -104px; margin-left: auto; margin-right: auto; z-index: 1; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding layout-margin>
+			<div class="md-whiteframe-4dp" layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="80" layout-align="start start" ng-attr-style="margin-top: -104px; margin-left: auto; margin-right: auto; z-index: 1; min-height: 600px; background-color: {{base_hue_lightest.value}};" layout-padding layout-margin>
 
 		    	<div style="margin-bottom: 100px;">
 			    	<div ng-repeat="content in spotlightPage.data.page.contents">
