--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -23,8 +23,8 @@
 	    <div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div layout="row" flex="100" style="height: 300px; position: relative; top: 0; overflow: hidden; text-align: center;">
-				<div style="width: 100%; height: 100%; position: absolute;">
+			<div layout="row" flex="100" style="height: 500px; position: relative; top: 0; overflow: hidden; text-align: center;">
+				<div style="width: 100%; height: 100%; position: absolute; background: rgba({{primary_hue_normal_darkest_opacity}})">
 				    <img ng-src="{{spotlightPage.data.page.background.images.source}}">
 				</div>
 				<h2 style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{spotlightPage.data.title}}</h2>
