--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -6,7 +6,7 @@
 }
 </style>
 <md-content class="page" style="height: {{window_height}}px">
-	<section style="background: {{base_hue_lightest.value}}">
+	<section style="background: {{base_hue_lighter.value}}">
 
 		<!-- header -->
 		<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 5; box-shadow: none; border-bottom: 1px solid #e0e0e0">
@@ -23,10 +23,10 @@
 	    <div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div layout="row" flex="100" style="height: 500px; position: relative; top: 0; overflow: hidden; text-align: center;">
-				<div style="width: 100%; height: 100%; position: absolute; background: rgba({{primary_hue_normal_darkest_opacity}})">
+			<div layout="row" flex="100" style="height: 500px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{primary_hue_normal.value}};">
+				<!-- <div style="width: 100%; height: 100%; position: absolute; background: rgba({{primary_hue_normal_darkest_opacity}})">
 				    <img ng-src="{{spotlightPage.data.page.background.images.source}}">
-				</div>
+				</div> -->
 				<h2 style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{spotlightPage.data.title}}</h2>
 			</div>
 			<!-- =Page Title -->
