--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -20,13 +20,13 @@
 	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
 	    </md-button>
 
-	    <div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
+	    <div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
 			<div layout="row" flex="100" style="height: 500px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{primary_hue_normal.value}};">
-				<!-- <div style="width: 100%; height: 100%; position: absolute; background: rgba({{primary_hue_normal_darkest_opacity}})">
-				    <img ng-src="{{spotlightPage.data.page.background.images.source}}">
-				</div> -->
+				<div style="width: 100%; height: 100%; position: absolute; background: rgba({{primary_hue_normal_darkest_opacity}})">
+				    <img style="opacity: .2" ng-src="{{spotlightPage.data.page.background.images.source}}">
+				</div>
 				<h2 style="text-shadow: 1px 1px 8px rgba(0, 0, 0, .8); color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{spotlightPage.data.title}}</h2>
 			</div>
 			<!-- =Page Title -->
