--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -13,19 +13,19 @@
 	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
 	    </md-button>
 
-		<div class="interior-page" flex="100" layout-align="center start" layout="row" layout-wrap style="width: 100%;">
+		<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
 			<!-- Page Title -->
-			<div layout="row" flex="100" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center;">
+			<div layout="row" flex="100" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}}">
 				<div style="width: 100%; height: 100%; position: absolute;">
-				    <img ng-src="{{blogPage.data.page.background.images.source}}">
+				    <img style="opacity: .3" ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
-				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{blogPage.data.title}}</h2>
+				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto; text-shadow: 1px 1px 8px rgba(0, 0, 0, .8);" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
 			<!-- =Page Title -->
 
 			<!-- tab Panel Component -->
-		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="80" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding layout-margin>
+		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="70" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding layout-margin>
 
 				<md-list class="md-dense" flex="100" flex-gt-sm="100">
                     <md-list-item class="md-3-line" flex style="padding: 0;">
